ingress-tls/myapp-ingress-secure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-secure-ingress
  namespace: myapp
spec:
  tls:
  - hosts:
      - cksexam.com
    secretName: tls-secret
  rules:
  - host: cksexam.com
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
